src/objects/Pro_Services_Topic__c.object
<CustomObject>
    <customHelp>PSTopics_CustomHelp</customHelp>
    <description>Topics available for individual Offerings conducted by the Professional Services @ ASA team.</description>
    <fields>
        <fullName>Brand_del__c</fullName>
        <label>Brand?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SALT</fullName>
                </value>
                <value>
                    <fullName>ASA</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PS_ConferenceOffering__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the topic will be submitted to conferences for the current year.</description>
        <inlineHelpText>If this box is checked, this Topic is considered part of the standard conference offerings for all state, regional and national _ASFAA conferences.</inlineHelpText>
        <label>Conference Offering</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PS_TopicAvailableDeliveryFormat__c</fullName>
        <description>How this topic may be viewed/presented</description>
        <inlineHelpText>This field indicates the methods that may be used to deliver this content. Other options may be available, but may require additional development time.</inlineHelpText>
        <label>Available Delivery Formats</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Article</fullName>
                </value>
                <value>
                    <fullName>Presentation (in person)</fullName>
                </value>
                <value>
                    <fullName>Presentation (web-based)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PS_TopicAvailablePresenters__c</fullName>
        <description>Other members of the ProServices @ ASA team who are able to present this topic.</description>
        <inlineHelpText>This field indicates the ProServices @ ASA team members who may be able to presnt on this topic.</inlineHelpText>
        <label>Available Presenters</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gina Lucente-Cole</fullName>
                </value>
                <value>
                    <fullName>Jacquie Carroll</fullName>
                </value>
                <value>
                    <fullName>Jen Schott</fullName>
                </value>
                <value>
                    <fullName>Joanne Dashiell</fullName>
                </value>
                <value>
                    <fullName>Lyssa Thaden</fullName>
                </value>
                <value>
                    <fullName>Sabrina Mainini</fullName>
                </value>
                <value>
                    <fullName>Non-PS ASA Staff</fullName>
                </value>
                <value>
                    <fullName>Fidel Calero</fullName>
                </value>
                <value>
                    <fullName>Daryl Conte</fullName>
                </value>
                <value>
                    <fullName>Lorinda Diehl</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PS_TopicCategory__c</fullName>
        <description>The category or categories used to group topics together.</description>
        <inlineHelpText>The Category is the general group or thematic area that this Topic falls under.</inlineHelpText>
        <label>Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASA Products &amp; Services</fullName>
                </value>
                <value>
                    <fullName>Campus Leadership</fullName>
                </value>
                <value>
                    <fullName>Financial Literacy for Campus Staff</fullName>
                </value>
                <value>
                    <fullName>Financial Literacy for Students</fullName>
                </value>
                <value>
                    <fullName>Regulations &amp; Compliance</fullName>
                </value>
                <value>
                    <fullName>Default Prevention and Management</fullName>
                </value>
                <value>
                    <fullName>SALT Specific</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PS_TopicDescription__c</fullName>
        <description>Describe this topic.</description>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PS_TopicHowWillYouBenefit__c</fullName>
        <description>How will the user benefit from this topic?</description>
        <label>How Will You Benefit</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PS_TopicLevel__c</fullName>
        <description>Target level for expected audience.</description>
        <label>Level</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Beginner</fullName>
                </value>
                <value>
                    <fullName>Intermediate</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PS_TopicSubTitle__c</fullName>
        <description>Sub-title for the topic.</description>
        <label>Sub-Title</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_TopicSynopsis_del__c</fullName>
        <description>Write a brief synopsis of this topic (suitable for publication in a conference program or in a flyer advertising this session).</description>
        <label>Synopsis</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PS_TopicTypicalLength__c</fullName>
        <description>The typical lenght of a presentation.</description>
        <label>Typical Length</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>30 minutes</fullName>
                </value>
                <value>
                    <fullName>60 minutes</fullName>
                </value>
                <value>
                    <fullName>90 minutes</fullName>
                </value>
                <value>
                    <fullName>2 hours</fullName>
                </value>
                <value>
                    <fullName>1/2 day</fullName>
                </value>
                <value>
                    <fullName>Full day</fullName>
                </value>
                <value>
                    <fullName>Varies</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PS_TopicWhoShouldAttend__c</fullName>
        <description>Who should attend this topic?</description>
        <label>Who Should Attend</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>What is the current status of this topic?</description>
        <inlineHelpText>This field indicates the current status of this Topic. In development = Future offering but not yet developed; Active = Available Topic; Archived = Available only upon request (may be outdated or no longer relevant); Removed = Not available.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Development</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Status_del__c</fullName>
        <description>What is the current sub status of this topic?</description>
        <inlineHelpText>The Sub-Status is dependent upon the value of the Status field and provides more information about the current status of this Topic.</inlineHelpText>
        <label>Sub-Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High Priority</fullName>
                </value>
                <value>
                    <fullName>Standard Priority</fullName>
                </value>
                <value>
                    <fullName>Low Priority</fullName>
                </value>
                <value>
                    <fullName>Initial Version</fullName>
                </value>
                <value>
                    <fullName>Revised/Updated</fullName>
                </value>
                <value>
                    <fullName>Limited Interest</fullName>
                </value>
                <value>
                    <fullName>Few Requests</fullName>
                </value>
                <value>
                    <fullName>Outdated</fullName>
                </value>
                <value>
                    <fullName>Replaced</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Create On Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Pro Services Topic</label>
    <listViews>
        <fullName>ASA_Brand</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Brand_del__c</columns>
        <columns>PS_TopicCategory__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand_del__c</field>
            <operation>equals</operation>
            <value>ASA</value>
        </filters>
        <label>ASA Brand</label>
    </listViews>
    <listViews>
        <fullName>AllTopics</fullName>
        <columns>NAME</columns>
        <columns>PS_TopicSubTitle__c</columns>
        <columns>PS_TopicCategory__c</columns>
        <columns>PS_TopicSynopsis_del__c</columns>
        <columns>PS_TopicLevel__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Topics</label>
    </listViews>
    <listViews>
        <fullName>Articlesactivearchived</fullName>
        <columns>NAME</columns>
        <columns>PS_TopicSynopsis_del__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status_del__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PS_TopicAvailableDeliveryFormat__c</field>
            <operation>includes</operation>
            <value>Article</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active,Archived</value>
        </filters>
        <label>Articles (active &amp; archived)</label>
    </listViews>
    <listViews>
        <fullName>Articlesactiveonly</fullName>
        <columns>NAME</columns>
        <columns>PS_TopicSynopsis_del__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status_del__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PS_TopicAvailableDeliveryFormat__c</field>
            <operation>includes</operation>
            <value>Article</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Articles (active only)</label>
    </listViews>
    <listViews>
        <fullName>Both_Brand</fullName>
        <columns>NAME</columns>
        <columns>Brand_del__c</columns>
        <columns>PS_TopicCategory__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand_del__c</field>
            <operation>equals</operation>
            <value>Both</value>
        </filters>
        <label>Both Brand</label>
    </listViews>
    <listViews>
        <fullName>ConfPresentationsactivearchived</fullName>
        <columns>NAME</columns>
        <columns>PS_TopicCategory__c</columns>
        <columns>PS_TopicSynopsis_del__c</columns>
        <columns>PS_TopicAvailablePresenters__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status_del__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PS_ConferenceOffering__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>Active,Archived</value>
        </filters>
        <label>Conf. Presentations (active &amp; archived)</label>
    </listViews>
    <listViews>
        <fullName>ConfPresentationsactiveonly</fullName>
        <columns>NAME</columns>
        <columns>PS_TopicCategory__c</columns>
        <columns>PS_TopicSynopsis_del__c</columns>
        <columns>PS_TopicAvailablePresenters__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status_del__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PS_ConferenceOffering__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>Active</value>
        </filters>
        <label>Conf. Presentations (active only)</label>
    </listViews>
    <listViews>
        <fullName>Financial_Literacy_for_Students</fullName>
        <columns>NAME</columns>
        <columns>PS_TopicDescription__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PS_TopicCategory__c</field>
            <operation>equals</operation>
            <value>Financial Literacy for Students</value>
        </filters>
        <filters>
            <field>PS_TopicAvailableDeliveryFormat__c</field>
            <operation>notEqual</operation>
            <value>Article</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Topics - Financial Literacy for Students</label>
    </listViews>
    <listViews>
        <fullName>ProfessionalServices</fullName>
        <filterScope>Queue</filterScope>
        <label>Professional Services</label>
        <queue>ProfessionalServices</queue>
    </listViews>
    <listViews>
        <fullName>ProfessionalServicesManagement</fullName>
        <filterScope>Queue</filterScope>
        <label>Professional Services Management</label>
        <queue>ProfessionalServicesManagement</queue>
    </listViews>
    <listViews>
        <fullName>SALT_Brand</fullName>
        <columns>NAME</columns>
        <columns>Brand_del__c</columns>
        <columns>PS_TopicCategory__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand_del__c</field>
            <operation>equals</operation>
            <value>SALT</value>
        </filters>
        <label>SALT Brand</label>
    </listViews>
    <listViews>
        <fullName>Topic_List_All_active</fullName>
        <columns>NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>PS_TopicCategory__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Archived,Removed</value>
        </filters>
        <label>Topic List - All active</label>
    </listViews>
    <listViews>
        <fullName>Topic_Title_Revision_Aug_091</fullName>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>UPDATEDBY_USER</field>
            <operation>contains</operation>
            <value>ardagna</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterOrEqual</operation>
            <value>8/11/2009 12:00 AM</value>
        </filters>
        <label>Topic - Title Revision (Aug. 09)</label>
        <queue>ProfessionalServices</queue>
        <sharedTo>
            <group>ASAProfessionalServices</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TopicsASAProductsServices</fullName>
        <columns>NAME</columns>
        <columns>PS_TopicSubTitle__c</columns>
        <columns>PS_TopicCategory__c</columns>
        <columns>PS_TopicSynopsis_del__c</columns>
        <columns>Status__c</columns>
        <columns>PS_TopicLevel__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PS_TopicCategory__c</field>
            <operation>includes</operation>
            <value>ASA Products &amp; Services</value>
        </filters>
        <label>Topics - ASA Products &amp; Services</label>
    </listViews>
    <listViews>
        <fullName>TopicsActiveNoArticles</fullName>
        <columns>NAME</columns>
        <columns>PS_TopicSubTitle__c</columns>
        <columns>PS_TopicCategory__c</columns>
        <columns>PS_TopicSynopsis_del__c</columns>
        <columns>Status__c</columns>
        <columns>PS_ConferenceOffering__c</columns>
        <columns>PS_TopicAvailableDeliveryFormat__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>PS_TopicAvailableDeliveryFormat__c</field>
            <operation>notEqual</operation>
            <value>Article</value>
        </filters>
        <label>Topics (Active - No Articles)</label>
    </listViews>
    <nameField>
        <label>Topic Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pro Services Topics</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>